@@ -1,4 +1,4 @@
-# Copyright 2003 Free Software Foundation, Inc.
+# Copyright 2003, 2004 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -125,13 +125,9 @@ gdb_test continue \
 #
 # Test resetting breakpoints when re-running program
 #
-send_gdb "run\n"
+gdb_run_cmd
 gdb_expect {
-    -re "The program .* has been started already.*y or n. $" {
-        send_gdb "y\n"
-        exp_continue
-    }
-    -re "Starting program.*Breakpoint \[0-9\]+,.*main .*argc.*argv.* at .*$srcfile:.*$gdb_prompt $"\
+    -re "Breakpoint \[0-9\]+,.*main .*argc.*argv.* at .*$srcfile:.*$gdb_prompt $"\
                             { pass "resetting breakpoints when rerunning" }
     -re ".*$gdb_prompt $"       { fail "resetting breakpoints when rerunning" }
     timeout                 { fail "resetting breakpoints when rerunning" }
